# stock-prices-prediction

./: app.py  model.py  pyproject.toml  render.yaml  reqirements.txt  requirements.txt  start.sh  vercel.json  wsgi.py
static/: script.js  style.css
templates/: index.html
