[tool.poetry]
name = "your_flask_app"
version = "0.1.0"
description = "Your Flask app description"
authors = ["Jay Wadhwani"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.1.0"
gunicorn = "^20.1.0"
scikit-learn = "^0.24.2"
numpy = "^1.21.0"
pandas = "^1.3.0"
yfinance = "^0.1.63"
# Add any other dependencies your Flask app requires

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
