[tool.poetry]
name = "your_flask_app"
version = "0.1.0"
description = "Your Flask app description"
authors = ["Jay Wadhwani"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^1.1.2"
gunicorn = "^20.1.0"
scikit-learn = "^1.0.2"
numpy = "^1.21.5"
pandas = "^1.4.4"
yfinance = "^0.2.40"
# Add any other dependencies your Flask app requires

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
